welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:18: error: not found: value setCouleur
  setCouleur(Color.yellow)
  ^